--- a/todo
+++ b/todo
@@ -1,4 +1,4 @@
-☐ 1、正则学习 @important 
+☐ 1、正则学习 @important @started(19-04-06 11:25)
 ✔ 2、柯里化函数 @high @done(19-04-03 21:06)
 ☐ 3、观察者模式、发布订阅模式 @high   
     -- read book
