更新一些读后感

--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
-☐ 1、正则学习 @important @started(19-04-06 11:25)
+✔ 1、正则学习 @important @started(19-04-06 11:25) @done(19-04-16 16:55) @lasted(1w3d5h30m48s)
 ✔ 2、柯里化函数 @high @done(19-04-03 21:06)
 ☐ 3、观察者模式、发布订阅模式 @high   
+☐ 4、你不知道的js阅读 @high 
     -- read book
