--- a/声明提升.md
+++ b/声明提升.md
@@ -1,4 +1,17 @@
 ### 提升
+  ```
+  <!-- examples first-->
+  a = 2;
+  var a; 
+  console.log(a) // 实际输出的是2： 1、var a -->声明提升； 2、 a = 2 --> 赋值  3、console.log(a)
+
+  <!-- exmaples second -->
+  console.log(a)
+  var a;
+  a = 2;
+  // output undefined: 1、var a --> 变量提升; 2、console.log(a); 3、 a = 2
+
+  ```
 
 上面有一个很好的变量编译和变量提升的解释 这里我们再深入聊一下提升这个概念
 1、提升是相当于当前作用域的提升，也可以说提升是绑定作用域的
