--- a/声明提升.md
+++ b/声明提升.md
@@ -49,6 +49,16 @@ var improve1 = function improve2() {
   var b = ...self...
 }
 ```
+这里涉及到函数的内部一个知识点
+```
+var i = function name() {
+  name = 'Dylan'
+  console.log(name) // [Function: name]
+  console.log(name === i) // true 地址跟地址的比较
+}
+console.log(name)  // ReferenceError
+```
+上面的代码开始`function name()`内部name未声明的情况默认为function本身，输出值为`[Function: name]`, 此时的`name`是一个指针，不是一个变量，外部输出所以报错
 
 函数和变量提升的顺序，函数和变量都会提升，前后是如何的顺序呢，稍微测试我们可以发现函数声明优先提升，然后是变量,
 我们用一个图解释下
