--- a/声明提升.md
+++ b/声明提升.md
@@ -24,7 +24,7 @@
 improve() 
 function improve() {
   console.log(name) // undefined
-  var nem = 'improve fn'
+  var name = 'improve fn'
 }
 console.log(name) // ReferenceError
 
