--- a/todo
+++ b/todo
@@ -11,4 +11,17 @@
     -- read book
 
 
+
  ✔ 6.git emoji @done(19-04-20 00:02)
+
+
+ learn:
+ ✔ gzip @done(19-07-09 19:44)
+ ✔ http & https @done(19-07-09 19:44)
+ ✔ cdn @done(19-07-10 23:32)
+ ☐ 单元测试
+ ☐ 算法
+ ☐ http缓存
+ ☐ vue路由为啥采用hash和history
+ ☐ event loop
+ ☐ 原型的作用
