--- a/todo
+++ b/todo
@@ -19,9 +19,11 @@
  ✔ gzip @done(19-07-09 19:44)
  ✔ http & https @done(19-07-09 19:44)
  ✔ cdn @done(19-07-10 23:32)
- ☐ 单元测试
- ☐ 算法
- ☐ http缓存
+ ✔ 单元测试 @done(20-05-30 14:29)
+ ✔ 算法 @done(20-05-30 14:29)
+ ✔ http缓存 @done(20-05-30 14:29)
  ☐ vue路由为啥采用hash和history
  ☐ event loop
  ☐ 原型的作用
+ ☐ call apply bind
+ 
