--- a/todo
+++ b/todo
@@ -26,4 +26,26 @@
  ☐ event loop
  ☐ 原型的作用
  ☐ call apply bind
+ ☐ 1、一定要多刷leetcode，至少100道以上
+ ☐ 2、基础要求是算法 网络  基础 框架. 如果看过node或v8或libuv的源代码就是加分项了。
+ ☐ 3、问的还是有点深度上次面试的时候网络从数据链路层到应用层都涉及到了
+ ☐ 4、coding代码比较多(写一个函数自运行generate之类的)，面试建议leetcode刷刷算法.
+☐ 5、Bom是什么？列举你知道的Bom对象，了解过hybrid通信的实现原理么
+✔ 6、fetch和ajax的区别 @done(20-06-28 20:54)
+✔ 7、data-xxx 属性的作用是什么？ @done(20-06-28 20:54)
+☐ 8、什么是浏览器的标准模式和怪异模式解释一下盒模型宽高值的计算方式，边界塌陷，负值作用，box-sizing概念- 
+☐ 缓存了解吗？
+☐ XSS是什么说一下？
+☐ CSRF了解吗？
+☐ 如何理解跨域。
+☐ cookie是什么，怎么存储
+☐ 框架用过NodeJS的EventEmitter模块吗，它是怎么实现功能的，步骤是什么？
+☐ 说说Vue框架，对于对象引用的情况呢
+☐ react怎样提高性能。react dom diff 原理是什么 。
+☐ react生命周期。
+☐ 代码JS中prototype、proto、super分别是什么？
+☐ 使用至少两种方式实现纯css的自适应
+☐ 搜索倒计时怎么做？
+☐ 实现一个响应式的正方形节流函数怎么写？
+☐ 手写bind函数如何用CSS实现一个三角形
  
